# Simple-Screenshot

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  vcpkg.json
cmake/: version.rc.in
cmake/lib/: autoCollectSources.cmake  automaticGameFolderOutput.cmake  copyOutputs.cmake
include/: Configuration.h  Events.h  Hooks.h  InputEventHandler.h  PCH.h  Plugin.h  Prisma.h  PrismaUI_API.h  Settings.h  stl.h
src/: Events.cpp  Hooks.cpp  InputEventHandler.cpp  Prisma.cpp  Settings.cpp  plugin.cpp
ui/: index.html  package-lock.json  package.json  svelte.config.js  tsconfig.app.json  vite.config.ts
ui/src/: App.tsx  app.css
